[package]
name = "cncli"
version = "6.0.1"
authors = ["Andrew Westberg <andrewwestberg@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "libsodium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12"
bigdecimal = "0.4"
num-bigint = "0.4"
num-rational = "0.4"
blake2b_simd = "1.0"
byteorder = "1.5"
#pallas-network = { git = "https://github.com/AndrewWestberg/pallas", rev="7c88a69d3129f22f604ae63e6f20477285cace09" }
#pallas-traverse = { git = "https://github.com/AndrewWestberg/pallas", rev="7c88a69d3129f22f604ae63e6f20477285cace09" }
pallas-network = "0.22"
pallas-traverse = "0.22"
chrono = "0.4"
chrono-tz = "0.8"
futures = "0.3"
hex = "0.4"
libc = "0.2"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls-webpki-roots", "rustls-tls", "json", "gzip", "deflate"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.3"
serde_cbor = "0.11"
serde_json = "1.0"
socket2 = "0.5"
structopt = "0.3"
rand = "0.8"
rayon = "1.8"
itertools = "0.12"
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "sync", "macros"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"


# logging
log = "0.4"
env_logger = "0.11"
pretty_env_logger = "0.5"

[build-dependencies]
autotools = "0.2"
pkg-config = "0.3"
built = { version = "0.7", features = ["git2"] }

[features]
libsodium-sys = []
