[package]
name = "cncli"
version = "6.4.0"
authors = ["Andrew Westberg <andrewwestberg@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13"
bech32 = "0.11"
bincode = "1.3.3"
byteorder = "1.5"
pallas-crypto = { git = "https://github.com/txpipe/pallas", rev = "de88df1986dc1487452075dd29cec0996a46e3c3" }
pallas-math = { git = "https://github.com/txpipe/pallas", rev = "de88df1986dc1487452075dd29cec0996a46e3c3" }
pallas-network = { git = "https://github.com/txpipe/pallas", rev = "de88df1986dc1487452075dd29cec0996a46e3c3" }
pallas-traverse = { git = "https://github.com/txpipe/pallas", rev = "de88df1986dc1487452075dd29cec0996a46e3c3" }
#pallas-crypto = "0.30"
#pallas-math = "0.30"
#pallas-network = "0.30"
#pallas-traverse = "0.30"
chrono = "0.4"
chrono-tz = "0.10"
futures = "0.3"
hex = "0.4"
malachite-base = "0.4.16"
malachite = "0.4.16"
minicbor = { version = "0.25", features = ["std"] }
redb = "2.1.1"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots", "rustls-tls", "json", "gzip", "deflate"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5"
serde_cbor = "0.11"
serde_json = "1.0"
socket2 = "0.5"
structopt = "0.3"
rand = "0.8"
rayon = "1.10"
itertools = "0.13"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v7"] }
log = "0.4.22"

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
